<resources>
    <string name="app_name">HAR</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="user">User</string>\
    <!-- <string name="pref_file">com.example.har.preference_file</string>
    <string name="pref_login_status">com.example.har.preference_login_status</string>
    <string name="pref_user_name">com.example.har.preference_user_name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string> -->
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="jk">
        <item>Perempuan</item>
        <item>Laki-laki</item>
    </string-array>
</resources>

