<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/login"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="598dp"
        android:background="@drawable/buttonframe"
        android:enabled="false"
        android:fontFamily="@font/ralewayregular"
        android:text="@string/action_log_in_short"
        android:textColor="@color/darkgrey"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="321dp"
        android:layout_height="38dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="417dp"
        android:autofillHints="@string/prompt_email"
        android:backgroundTint="@color/white"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="13dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="321dp"
        android:layout_height="38dp"
        android:layout_marginBottom="228dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="449dp"
        android:autofillHints="@string/prompt_password"
        android:backgroundTint="@color/white"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="13dp"
        android:fontFamily="sans-serif"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="571dp"
        android:text="Tidak Punya Akun?  "
        android:textSize="13dp"/>

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="227dp"
        android:layout_marginTop="571dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="13dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginBottom="195dp"
        android:layout_marginTop="501dp"
        android:fontFamily="sans-serif-medium"
        android:text="Lupa Password?"
        android:textColor="@color/white"
        android:textSize="13dp"/>


</FrameLayout>